add def port to edit read cursor delay length

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,7 @@ project(cpprich VERSION 1.0)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_STANDARD 11)
 
+add_definitions(-g -Wall -Wno-unknown-pragmas)
+
 include_directories(include)
 add_subdirectory(src)
